2010-12-04  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-inspect.el (soap-inspect-port): use just the port name (not
	the fq name)

	* soap-client.el (*soap-well-known-xmlns*): added some new
	namespaces
	(*soap-target-xmlns*): new variable
	(soap-l2wk): new function
	(soap-l2fq): use *soap-target-xmlns* if name is unqualified
	(soap-extract-xmlns): return the targetNamespace in addition to
	the default namespace
	(soap-with-local-xmlns): bind *soap-target-xmlns*
	(soap-get-target-namespace, soap-xml-get-children1)
	(soap-xml-get-attribute-or-nil1): new functions
	(soap-resolve-references-for-operation): don't intern the elements
	of parameter-order, if we just created it
	(soap-parse-wsdl, soap-parse-schema, soap-parse-schema-element)
	(soap-parse-complex-type, soap-parse-sequence)
	(soap-parse-complex-type-complex-content, soap-parse-message)
	(soap-parse-port-type, soap-parse-operation, )
	(soap-parse-binding, soap-decode-type, soap-decode-any-type)
	(soap-decode-array, soap-parse-envelope): use local to well-known
	translations (instead of the reverse)

2010-11-24  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-namespace-get): avoid using `find-if' from
	the cl package.
	(soap-wsdl-find-namespace): new function
	(soap-wsdl-add-namespace, soap-wsdl-get): use it
	(soap-encode-value, soap-encode-body): use `add-to-list' on
	`*soap-encoded-namespaces*' instead of `push'
	(soap-create-envelope): no need to call `remove-duplicates' on
	`*soap-encoded-namespaces*'
	(soap-invoke): use an explicit loop to look for the service, avoid
	using `find' from the cl package

2010-11-18  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-inspect.el (soap-sample-value-for-basic-type): bigger
	random range for integer values, changed sample string value.
	(soap-sample-value-for-array-type): provide two different sample
	values for the array elements
	(soap-inspect-basic-type, soap-inspect-sequence-type)